# anfis-toolbox

./: .hatch.toml  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_detailed.md  README_improved.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish-dev.yml  publish.yml
anfis_toolbox/: __init__.py  builders.py  classifier.py  clustering.py  config.py  estimator_utils.py  layers.py  logging_config.py  losses.py  membership.py  metrics.py  model.py  model_selection.py  regressor.py  validation.py  visualization.py
anfis_toolbox/optim/: __init__.py  _utils.py  adam.py  base.py  hybrid.py  hybrid_adam.py  parameter_utils.py  pso.py  rmsprop.py  sgd.py
api/: index.html
api/builders/: index.html
api/classifier/: index.html
api/clustering/: index.html
api/config/: index.html
api/core/: index.html
api/layers/: index.html
api/logging/: index.html
api/losses/: index.html
api/membership-functions/: index.html
api/metrics/: index.html
api/models/: index.html
api/optim/: index.html
api/overview/: index.html
api/regressor/: index.html
assets/badge/: v0.json
assets/benchmark/: index.json  info.json  regressions.xml
assets/benchmark/graphs/arch-x86_64/branch-main/cpu-Intel(R) Core(TM) i7-6700T CPU @ 2.80GHz/machine-local/num_cpu-4/os-Linux 6.17.0-12-generic/python-3.13/ram-4GB/: summary.json
assets/benchmark/graphs/summary/: bench_training.BenchmarkANFISTraining.peakmem_training_epoch.json  bench_training.BenchmarkANFISTraining.time_training_epoch.json
assets/cov/: class_index.html  function_index.html  index.html  status.json  z_3e1e53d9a7a383e4___init___py.html  z_3e1e53d9a7a383e4_builders_py.html  z_3e1e53d9a7a383e4_classifier_py.html  z_3e1e53d9a7a383e4_clustering_py.html  z_3e1e53d9a7a383e4_config_py.html  z_3e1e53d9a7a383e4_estimator_utils_py.html  z_3e1e53d9a7a383e4_layers_py.html  z_3e1e53d9a7a383e4_logging_config_py.html  z_3e1e53d9a7a383e4_losses_py.html  z_3e1e53d9a7a383e4_membership_py.html  z_3e1e53d9a7a383e4_metrics_py.html  z_3e1e53d9a7a383e4_model_py.html  z_3e1e53d9a7a383e4_regressor_py.html  z_e4683ecc875e9bbe___init___py.html  z_e4683ecc875e9bbe__utils_py.html  z_e4683ecc875e9bbe_adam_py.html  z_e4683ecc875e9bbe_base_py.html  z_e4683ecc875e9bbe_hybrid_adam_py.html  z_e4683ecc875e9bbe_hybrid_py.html  z_e4683ecc875e9bbe_pso_py.html  z_e4683ecc875e9bbe_rmsprop_py.html  z_e4683ecc875e9bbe_sgd_py.html
contributing/: index.html
docs/: contributing.md  exemplos.ipynb  guide.md  hybrid_vs_backprop.md  index.md  logging.md  plots.ipynb
docs/api/: builders.md  classifier.md  clustering.md  config.md  core.md  index.md  layers.md  logging.md  losses.md  membership-functions.md  metrics.md  models.md  optim.md  overview.md  regressor.md
docs/css/stylesheets/: extra.css
docs/estimators/: anfis-classifier.md  anfis-regressor.md
docs/examples/: advanced_example.ipynb  basic.md  basic_example.ipynb  classifier_basic.ipynb  classifier_iris.ipynb  function_approximation.ipynb  index.md  intermediate_example.ipynb  regression_basic.ipynb  time_series.ipynb
docs/getting-started/: installation.md  quickstart.md
docs/guide/: bellmf.md  contributing.md  gaussianmf.md  index.md  membership_functions.md
docs/hooks/: test_hook.py
docs/js/: fix_code_jupyter.js  render_latex.js
docs/membership_functions/: bellmf.md  introduction.md  linsshapedmf.ipynb  linzshapedmf.ipynb  trapezoidalmf.ipynb  zshapedmf.ipynb
docs/models/: anfis-classifier.md  anfis.md  fuzzy_c-means.md
estimators/anfis-classifier/: index.html
estimators/anfis-regressor/: index.html
examples/: anfis_paper_example.py  comprehensive_examples.py  triangular_mf_examples.py  usage_examples.py
examples/advanced_example/: index.html
examples/basic_example/: index.html
examples/classifier_basic/: index.html
examples/classifier_iris/: index.html
examples/function_approximation/: index.html
examples/intermediate_example/: index.html
examples/regression_basic/: index.html
examples/time_series/: index.html
exemplos/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/: index.html
guide/contributing/: index.html
hooks/test_hook/: index.html
hybrid_vs_backprop/: index.html
models/anfis/: index.html
models/anfis-classifier/: index.html
models/fuzzy_c-means/: index.html
search/: search_index.json
tests/: test_builders.py  test_builders_coverage_edges.py  test_builders_fixed.py  test_builders_gaussian2.py  test_builders_new_mfs.py  test_classification.py  test_classifier_model_private.py  test_clustering.py  test_config.py  test_estimator_utils.py  test_examples.py  test_init.py  test_layers.py  test_losses.py  test_membership.py  test_metrics.py  test_model.py  test_model_selection.py  test_optim_adam.py  test_optim_hybrid.py  test_optim_pso.py  test_optim_rmsprop.py  test_optim_trainers_api.py  test_parameter_utils.py  test_regressor.py  test_validation.py  test_visualization.py
