[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "anfis-toolbox"
dynamic = ["version"]
description = "A Python toolbox for building, training, and evaluating Adaptive Neuro-Fuzzy Inference System (ANFIS) models."
authors = [{ name = "Daniel França", email = "daniel@ci.ufpb.br" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24.4",
]
requires-python = ">=3.8"

[tool.hatch.version]
path = 'anfis_toolbox/__init__.py'

[tool.hatch.build.targets.sdist]
include = ["/README.md", "/Makefile", "/anfis_toolbox", "/tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    'F',      # Pyflakes
    'E',      # pycodestyle (Error)
    'I',      # isort
    'D',      # pydocstyle
    'UP',     # pyupgrade
    'YTT',    # flake8-2020
    'B',      # flake8-bugbear
    'T10',    # flake8-debugger
    'T20',    # flake8-print
    'C4',     # flake8-comprehensions
    'PYI006', # flake8-pyi
]
ignore = ['D100', 'D104']
pydocstyle = { convention = 'google' }
isort = { known-first-party = ['anfis', 'tests'] }

[tool.ruff.lint.per-file-ignores]
'tests/*' = ['D']

[tool.pytest.ini_options]
testpaths = 'tests'
xfail_strict = true

[tool.coverage.run]
source = ['anfis']
branch = true
relative_files = true

[dependency-groups]
dev = ["coverage>=7.6.1", "pytest-cov>=5.0.0"]
