[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "anfis-toolbox"
dynamic = ["version"]
description = "A Python toolbox for building, training, and evaluating Adaptive Neuro-Fuzzy Inference System (ANFIS) models."
authors = [{ name = "Daniel França", email = "daniel@ci.ufpb.br" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24.4",
]
requires-python = ">=3.9"

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.5.0",
]
validation = [
    "scikit-learn>=1.0.0",
]
all = [
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
]

[tool.hatch.version]
path = 'anfis_toolbox/__init__.py'

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.build.targets.wheel]
packages = ["anfis_toolbox"]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "/Makefile", "/anfis_toolbox", "/tests"]

[tool.hatch.envs.hatch-test]
installer = "uv"
features = ["all"]
dependencies = [
    "coverage[toml]>=7.6.1",
    "pytest>=7.0.0",
    "pytest-cov>=5.0.0",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.13", "3.12", "3.11", "3.10", "3.9"]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} {args}"
run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
cov-combine = "coverage combine"
cov-report = "coverage report -m"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    'F',      # Pyflakes
    'E',      # pycodestyle (Error)
    'I',      # isort
    'D',      # pydocstyle
    'UP',     # pyupgrade
    'YTT',    # flake8-2020
    'B',      # flake8-bugbear
    'T10',    # flake8-debugger
    'T20',    # flake8-print
    'C4',     # flake8-comprehensions
    'PYI006', # flake8-pyi
]
ignore = ['D100', 'D104']
pydocstyle = { convention = 'google' }
isort = { known-first-party = ['anfis_toolbox', 'tests'] }

[tool.ruff.lint.per-file-ignores]
'tests/*' = ['D']

[tool.pytest.ini_options]
testpaths = 'tests'
xfail_strict = true

[tool.coverage.run]
source = ['anfis_toolbox']
branch = true
relative_files = true

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
]
